<resources>
    <string name="app_name">Knots and Crosses</string>

    <string name="protocol">https://</string>
    <string name="domain">generic-game-service.herokuapp.com</string>
    <string name="base_path">/Game</string>
    <string name="create_game_path">/</string>
    <string name="join_game_path">/%1s/join</string>
    <string name="poll_game_path">/%1s/poll</string>
    <string name="update_game_path">/%1s/update</string>
    <string name="game_service_key">gjF9ebA3Ix</string>


    <string name="tre_pa_rad_logo">Tre på rad logo</string>
    <string name="knots_and_crosses">Knots and Crosses</string>
    <string name="start">Start</string>
    <string name="join">Join</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player_name">Player name</string>
    <string name="latest_game_id">Latest game id</string>
    <string name="game_id">Game id</string>
    <string name="opponent">Waiting for opponent</string>
    <string name="cheat_mode">Cheat mode</string>
    <string name="standard_mode">Standard mode</string>
</resources>