...
        app:layout_constraintBottom_toTopOf="@id/ll_game_tiles"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_player_name"
        android:text="@string/player_name"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_opponent_name"
        app:layout_constraintTop_toBottomOf="@id/ll_game_tiles"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
...
